--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 # MONGO_URI=mongodb://localhost:27017/chauhanJewellery
 
-MONGO_URI=mongodb+srv://careerinfowisitsolutionwd:Career@12345@jewellers.ly7cvu3.mongodb.net/chauhanJewellers?retryWrites=true&w=majority&appName=ChauhanJewellers
+# MONGO_URI=mongodb+srv://careerinfowisitsolutionwd:Career@12345@jewellers.ly7cvu3.mongodb.net/chauhanJewellers?retryWrites=true&w=majority&appName=ChauhanJewellers
 
+MONGO_URI=mongodb+srv://careerinfowisitsolutionwd:Career@%4012345@jewellers.ly7cvu3.mongodb.net/chauhanJewellers?retryWrites=true&w=majority&appName=ChauhanJewellers
 
 
 # MONGO_URI=mongodb://naveen:naveen@13.127.13.91:27017/sms
