--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
 # MONGO_URI=mongodb://localhost:27017/chauhanJewellery
 
+MONGO_URI=mongodb+srv://careerinfowisitsolutionwd:Ciis1234@cluster0.huybyk4.mongodb.net/chauhan?retryWrites=true&w=majority&appName=Cluster0
 # MONGO_URI=mongodb+srv://careerinfowisitsolutionwd:Career@12345@jewellers.ly7cvu3.mongodb.net/chauhanJewellers?retryWrites=true&w=majority&appName=ChauhanJewellers
 
-MONGO_URI=mongodb+srv://careerinfowisitsolutionwd:Career@%4012345@jewellers.ly7cvu3.mongodb.net/chauhanJewellers?retryWrites=true&w=majority&appName=ChauhanJewellers
+# MONGO_URI=mongodb+srv://careerinfowisitsolutionwd:Career@%4012345@jewellers.ly7cvu3.mongodb.net/chauhanJewellers?retryWrites=true&w=majority&appName=ChauhanJewellers
 
 
 JWT_SECRET=your_jwt_secret
