nodemailer otp app.js+env

--- a/.env
+++ b/.env
@@ -6,6 +6,9 @@ MONGO_URI=mongodb://localhost:27017/chauhanJewellery
 
 # MONGO_URI=mongodb+srv://careerinfowisitsolutionwd:Career@%4012345@jewellers.ly7cvu3.mongodb.net/chauhanJewellers?retryWrites=true&w=majority&appName=ChauhanJewellers
 
+EMAIL_USERNAME=ciisankita@gmail.com
+# EMAIL_PASSWORD=Career@1234
+EMAIL_PASSWORD=yzpm dnzz zbmh bbgf
 
 JWT_SECRET=your_jwt_secret
 
