--- a/.env
+++ b/.env
@@ -2,12 +2,8 @@
 
 MONGO_URI=mongodb+srv://careerinfowisitsolutionwd:Ciis1234@cluster0.huybyk4.mongodb.net/chauhan?retryWrites=true&w=majority&appName=Cluster0
 
-# MONGO_URI=mongodb+srv://careerinfowisitsolutionwd:Career@12345@jewellers.ly7cvu3.mongodb.net/chauhanJewellers?retryWrites=true&w=majority&appName=ChauhanJewellers
-
-# MONGO_URI=mongodb+srv://careerinfowisitsolutionwd:Career@%4012345@jewellers.ly7cvu3.mongodb.net/chauhanJewellers?retryWrites=true&w=majority&appName=ChauhanJewellers
-
-EMAIL_USERNAME=ciisankita@gmail.com
-EMAIL_PASSWORD=yzpm dnzz zbmh bbgf
+EMAIL_USERNAME=chauhansonsjewellers@gmail.com
+EMAIL_PASSWORD=ncdw tovu pfuw bphr
 
 JWT_SECRET=your_jwt_secret
 
