--- a/.env
+++ b/.env
@@ -5,6 +5,12 @@ MONGO_URI=mongodb+srv://careerinfowisitsolutionwd:Ciis1234@cluster0.huybyk4.mong
 EMAIL_USERNAME=chauhansonsjewellers@gmail.com
 EMAIL_PASSWORD=ncdw tovu pfuw bphr
 
+# Razorpay Configuration
+RAZORPAY_KEY_ID=rzp_live_RCKnQvruACO5FH
+RAZORPAY_KEY_SECRET=xgz84vYNWqfHZaIIUusykIeY
+
+# Razorpay Webhook Secret (IMPORTANT: This should match exactly in Razorpay Dashboard)
+RAZORPAY_WEBHOOK_SECRET=chauhansecret
 
 JWT_SECRET=your_jwt_secret
 
