--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^7.0.6",
     "nodemon": "^3.1.10",
+    "razorpay": "^2.9.6",
     "request-ip": "^3.3.0",
     "winston": "^3.17.0"
   }
